--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
-.list-group {
-  margin: 50px;
-  padding: 50px;
-  background: #0e0e0e;
-  width: 500px;
-  height:350px;
+.container {
+
+  background: #bd5454;
   font-family: 'Courier New';
   text-align: center;
+  padding: 50px;
+  margin: 50px;
 }
 
 .btn btn-dark {
   align-content: center;
 }
+
+.list-group {
+  width: 90%;
+  margin: 0 auto;
+}
+
+h1 {
+  font-family: 'Sniglet', cursive;
+  font-size: 50px;
+  color: rgb(241, 195, 203);
+  text-align: center;
+} 
